--- a/C/common/CMakeLists.txt
+++ b/C/common/CMakeLists.txt
@@ -22,7 +22,7 @@ find_package(PkgConfig REQUIRED)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python COMPONENTS Interpreter Development)
+	find_package(Python3 COMPONENTS Interpreter Development NumPy)
 endif()
 
 # Find source files
