--- a/C/common/CMakeLists.txt
+++ b/C/common/CMakeLists.txt
@@ -26,7 +26,7 @@ find_package(PkgConfig REQUIRED)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-	find_package(Python3 COMPONENTS Interpreter Development NumPy)
+	find_package(Python3 COMPONENTS Interpreter Development NumPy Development)
 endif()
 
 # Find source files
@@ -40,6 +40,7 @@ if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     include_directories(${PYTHON_INCLUDE_DIRS})
 else()
     include_directories(${Python_INCLUDE_DIRS})
+    include_directories(${Python_NUMPY_INCLUDE_DIRS})
 endif()
 
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
