--- a/C/services/south-plugin-interfaces/python/async_ingest_pymodule/CMakeLists.txt
+++ b/C/services/south-plugin-interfaces/python/async_ingest_pymodule/CMakeLists.txt
@@ -16,7 +16,7 @@ file(GLOB SOURCES ingest_callback_pymodule.cpp)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python COMPONENTS Interpreter Development)
+    find_package(Python COMPONENTS Interpreter Development REQUIRED python3)
 endif()
 
 # Include header files
