--- a/C/common/CMakeLists.txt
+++ b/C/common/CMakeLists.txt
@@ -26,7 +26,7 @@ find_package(PkgConfig REQUIRED)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python COMPONENTS Interpreter Development NumPy REQUIRED python3)
+    find_package(Python COMPONENTS Interpreter Development NumPy)
 endif()
 
 # Find source files
