--- a/C/services/filter-plugin-interfaces/python/CMakeLists.txt
+++ b/C/services/filter-plugin-interfaces/python/CMakeLists.txt
@@ -15,7 +15,7 @@ file(GLOB SOURCES python_plugin_interface.cpp)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python COMPONENTS Interpreter Development REQUIRED python3)
+    find_package(Python COMPONENTS Interpreter Development)
 endif()
 
 # Include header files
