--- a/tests/unit/C/plugins/storage/sqlitememory/CMakeLists.txt
+++ b/tests/unit/C/plugins/storage/sqlitememory/CMakeLists.txt
@@ -42,7 +42,7 @@ find_package(PkgConfig REQUIRED)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python COMPONENTS Interpreter Development)
+    find_package(Python3 COMPONENTS Interpreter Development)
 endif()
 
 # Add Python 3.x header files
