--- a/C/common/CMakeLists.txt
+++ b/C/common/CMakeLists.txt
@@ -26,7 +26,7 @@ find_package(PkgConfig REQUIRED)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python COMPONENTS Interpreter Development)
+    find_package(Python REQUIRED COMPONENTS Interpreter Development NumPy)
 endif()
 
 # Find source files
@@ -52,11 +52,11 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib)
 
 # Create shared library
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
-# Add Python 3.5 library
+# Add Python 3.x library
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     target_link_libraries(${PROJECT_NAME} ${PYTHON_LIBRARIES})
 else()
-    target_link_libraries(${PROJECT_NAME} ${Python_LIBRARIES})
+    target_link_libraries(${PROJECT_NAME} ${Python_LIBRARIES} Python3::NumPy)
 endif()
 
 
