remove target link lib to avoid all linked and use include dirs

--- a/C/common/CMakeLists.txt
+++ b/C/common/CMakeLists.txt
@@ -45,7 +45,7 @@ endif()
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     link_directories(${PYTHON_LIBRARY_DIRS})
 else()
-    link_directories(${Python_LIBRARY_DIRS})
+    link_directories(${Python_LIBRARY_DIRS} ${Python_NUMPY_INCLUDE_DIRS})
 endif()
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib)
@@ -56,7 +56,7 @@ add_library(${PROJECT_NAME} SHARED ${SOURCES})
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     target_link_libraries(${PROJECT_NAME} ${PYTHON_LIBRARIES})
 else()
-    target_link_libraries(${PROJECT_NAME} ${Python_LIBRARIES} Python3::NumPy)
+    target_link_libraries(${PROJECT_NAME} ${Python_LIBRARIES})
 endif()
 
 
