Use Python_3 suffix
Signed-off-by: Mark Riddoch <mark@dianomic.com>

--- a/C/services/filter-plugin-interfaces/python/filter_ingest_pymodule/CMakeLists.txt
+++ b/C/services/filter-plugin-interfaces/python/filter_ingest_pymodule/CMakeLists.txt
@@ -30,13 +30,13 @@ include_directories(../../../../thirdparty/rapidjson/include)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     include_directories(${PYTHON_INCLUDE_DIRS})
 else()
-    include_directories(${Python_INCLUDE_DIRS})
+    include_directories(${Python3_INCLUDE_DIRS})
 endif()
 
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     link_directories(${PYTHON_LIBRARY_DIRS})
 else()
-    link_directories(${Python_LIBRARY_DIRS})
+    link_directories(${Python3_LIBRARY_DIRS})
 endif()
 link_directories(${PROJECT_BINARY_DIR}/../../../../lib)
 
@@ -49,7 +49,7 @@ add_library(${PROJECT_NAME} SHARED ${SOURCES})
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     target_link_libraries(${PROJECT_NAME} ${PYTHON_LIBRARIES})
 else()
-    target_link_libraries(${PROJECT_NAME} ${Python_LIBRARIES})
+    target_link_libraries(${PROJECT_NAME} ${Python3_LIBRARIES})
 endif()
 
 target_link_libraries(${PROJECT_NAME} ${DLLIB})
