--- a/tests/unit/C/services/core/CMakeLists.txt
+++ b/tests/unit/C/services/core/CMakeLists.txt
@@ -43,13 +43,13 @@ endif()
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     include_directories(${PYTHON_INCLUDE_DIRS})
 else()
-    include_directories(${Python_INCLUDE_DIRS})
+    include_directories(${Python3_INCLUDE_DIRS})
 endif()
 
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     link_directories(${PYTHON_LIBRARY_DIRS})
 else()
-    link_directories(${Python_LIBRARY_DIRS})
+    link_directories(${Python3_LIBRARY_DIRS})
 endif()
 
 link_directories(${PROJECT_BINARY_DIR}/../../../lib)
@@ -68,6 +68,6 @@ target_link_libraries(RunTests ${SERVICE_COMMON_LIB})
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     target_link_libraries(RunTests ${PYTHON_LIBRARIES})
 else()
-    target_link_libraries(RunTests ${Python_LIBRARIES})
+    target_link_libraries(RunTests ${Python3_LIBRARIES})
 endif()
 
