--- a/C/common/CMakeLists.txt
+++ b/C/common/CMakeLists.txt
@@ -30,7 +30,7 @@ find_package(PkgConfig REQUIRED)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python3 COMPONENTS Interpreter Development NumPy)
+    find_package(Python3 REQUIRED COMPONENTS Interpreter Development NumPy)
 endif()
 
 # Find source files
