--- a/C/services/common/CMakeLists.txt
+++ b/C/services/common/CMakeLists.txt
@@ -17,7 +17,7 @@ file(GLOB SOURCES *.cpp)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python3 COMPONENTS Interpreter Development)
+    find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
 endif()
 
 # Include header files
