FOGL-6229 Bullseye build issues with 5665 branch (#580)
* FOGL-6229 Bullseye build issues

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Updates

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Require python3

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Revert REQYIRED python3 change

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Switch to find_package(Python3...

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Use Python_3 suffix

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Add REQUIRED

Signed-off-by: Mark Riddoch <mark@dianomic.com>

--- a/C/services/common/CMakeLists.txt
+++ b/C/services/common/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 2.4.0)
 
+if( POLICY CMP0007 )
+    cmake_policy( SET CMP0007 NEW )
+endif()
+
 project(services-common-lib)
 
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb")
@@ -13,7 +17,7 @@ file(GLOB SOURCES *.cpp)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python COMPONENTS Interpreter Development)
+    find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
 endif()
 
 # Include header files
@@ -24,7 +28,7 @@ include_directories(include ../../common/include ../../thirdparty/Simple-Web-Ser
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     include_directories(${PYTHON_INCLUDE_DIRS})
 else()
-    include_directories(${Python_INCLUDE_DIRS})
+    include_directories(${Python3_INCLUDE_DIRS})
 endif()
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../../lib)
