--- a/C/services/south-plugin-interfaces/python/CMakeLists.txt
+++ b/C/services/south-plugin-interfaces/python/CMakeLists.txt
@@ -15,7 +15,7 @@ file(GLOB SOURCES python_plugin_interface.cpp)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python COMPONENTS Interpreter Development)
+    find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
 endif()
 
 # Include header files
@@ -26,13 +26,13 @@ include_directories(../../../services/common-plugin-interfaces/python/include)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     include_directories(${PYTHON_INCLUDE_DIRS})
 else()
-    include_directories(${Python_INCLUDE_DIRS})
+    include_directories(${Python3_INCLUDE_DIRS})
 endif()
 
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     link_directories(${PYTHON_LIBRARY_DIRS})
 else()
-    link_directories(${Python_LIBRARY_DIRS})
+    link_directories(${Python3_LIBRARY_DIRS})
 endif()
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../../../lib)
@@ -47,7 +47,7 @@ target_link_libraries(${PROJECT_NAME} ${SERVICE_COMMON_LIB})
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0") 
     target_link_libraries(${PROJECT_NAME} ${PYTHON_LIBRARIES})
 else()
-    target_link_libraries(${PROJECT_NAME} ${Python_LIBRARIES})
+    target_link_libraries(${PROJECT_NAME} ${Python3_LIBRARIES})
 endif()
 
 set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
