--- a/tests/unit/C/plugins/storage/sqlite/CMakeLists.txt
+++ b/tests/unit/C/plugins/storage/sqlite/CMakeLists.txt
@@ -43,13 +43,13 @@ find_package(PkgConfig REQUIRED)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
-    find_package(Python COMPONENTS Interpreter Development)
+    find_package(Python3 COMPONENTS Interpreter Development)
 endif()
 
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     link_directories(${PYTHON_LIBRARY_DIRS})
 else()
-    link_directories(${Python_LIBRARY_DIRS})
+    link_directories(${Python3_LIBRARY_DIRS})
 endif()
 
 
@@ -73,5 +73,5 @@ target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARIES} pthread)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
 	target_link_libraries(${PROJECT_NAME} ${PYTHON_LIBRARIES})
 else()
-	target_link_libraries(${PROJECT_NAME} ${Python_LIBRARIES})
+	target_link_libraries(${PROJECT_NAME} ${Python3_LIBRARIES})
 endif()
