Option to add north as service or task
Signed-off-by: YashTatkondawar <yashtatkondawar@gmail.com>

--- a/tests/system/lab/test.config
+++ b/tests/system/lab/test.config
@@ -1,8 +1,10 @@
 FLEDGE_IP=localhost
 PI_IP=192.168.4.41
-PI_TOKEN='uid=x'
+PI_USER=Administrator
+PI_PASSWORD='xxx'
 MAX_RETRIES=100
 SLEEP_FIX=10 # Time to sleep to fix bugs. This should be zero.
 EXIT_EARLY=0
+ADD_NORTH_AS_SERVICE=true
 VERIFY_EGRESS_TO_PI=1
 STORAGE=sqlite # postgres, sqlite-in-memory, sqlitelb
