--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,8 +1,9 @@
 # Common - REST interface
-aiohttp==3.6.2
+aiohttp==3.8.1
 aiohttp_cors==0.7.0
+aiohttp-dynamic==1.3.0
 cchardet==2.1.4
-yarl==1.5.1
+yarl==1.7.2
 
 pyjwt==1.6.4
 
