FOGL-5144: create, validate, verify JWT service token with needed claims; pass startup token to all services (except storage and API) (#528)
FOGL-5144: create jwt service token with needed claims
Import libraries update
Pass one time token to services and tasks being started
Remove startup token when schedule is done or deleted
Addition of verify token endpoint in server management
Fix JSON error string
Check token to verify exists in system
Addition of refresh token endpoint
Fix for token member variable name
Fix compilation error
Set expiration time fix
Change for audience and issuer in token claims
Use ascii_letters for startup token
Refresh token API updated
Startup tokens moved to ServiceRegistry class
Return bearer_token in registration message even if not set
Use Authorization header in refresh_token
Use Authorization header in verify_token
Review feedback
Use a private dict for bearer tokens of registered servers
Moved check for valid bearer token
Commented out code now removed
Removed token parameter in ServiceRecord
Check bearer_token is registered fo given service
Unit tests fixed
Fix for wrong expect string in tests
Additional fixes for wrong expect string
FOGL-5144: addition of getBearerToken routine
Addition of verifyAccessBearerToken
Addition of received token cache
FOGL-5144: initial implementation of authentication middleware
Addition of Authentication middleware to North service
Make use of Security category in North service
Call token verification endpoint
Doxygen style comments added
Token verification checks for expiration
Addition of refreshAccessBearerToken
Use Authorization header in verify_token
Addition of Authentication Middleware for POST method
Move mutexes inside class
Added checks for JSON objects
Addition of get_token_common routine
Check for empty value of security category
Added checks for JSON parsing of token claims
Pass token in service creation
Addition of common routines
Pass caller

--- a/C/common/CMakeLists.txt
+++ b/C/common/CMakeLists.txt
@@ -66,6 +66,7 @@ endif()
 
 target_link_libraries(${PROJECT_NAME} ${UUIDLIB})
 target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} -lcrypto)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
 
