--- a/tests/unit/C/plugins/storage/sqlitememory/CMakeLists.txt
+++ b/tests/unit/C/plugins/storage/sqlitememory/CMakeLists.txt
@@ -1,9 +1,18 @@
+set( CMAKE_VERBOSE_MAKEFILE on )
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../../..)
+
+set(GCOVR_PATH "/home/foglamp/.local/bin/gcovr")
+
 # Project configuration
 project(RunTests)
 cmake_minimum_required(VERSION 2.6)
 set(CMAKE_CXX_FLAGS "-std=c++11 -O3")
 
-# libraries
+include(CodeCoverage)
+append_coverage_compiler_flags()
+
+# External libraries
 set(LIBCURL_LIB -lcurl)
 
 # Fledge libraries
@@ -81,3 +90,9 @@ if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
 else()
 	target_link_libraries(${PROJECT_NAME} ${Python3_LIBRARIES})
 endif()
+
+setup_target_for_coverage_gcovr_html(
+            NAME CoverageHtml
+            EXECUTABLE ${PROJECT_NAME}
+            DEPENDENCIES ${PROJECT_NAME}
+    )
