--- a/C/plugins/storage/common/CMakeLists.txt
+++ b/C/plugins/storage/common/CMakeLists.txt
@@ -11,6 +11,8 @@ file(GLOB SOURCES *.cpp)
 
 # Include header files
 include_directories(include)
+include_directories(../../../common/include)
+
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../../../lib)
 
