FOGL-6383 Update CMakeLists.txt to trigger retest
Signed-off-by: Mark Riddoch <mark@dianomic.com>

--- a/C/plugins/storage/common/CMakeLists.txt
+++ b/C/plugins/storage/common/CMakeLists.txt
@@ -10,7 +10,7 @@ set(DLLIB -ldl)
 file(GLOB SOURCES *.cpp)
 
 # Include header files
-include_directories(include)
+include_directories(./include)
 include_directories(../../../common/include)
 
 
