FOGL-6383 sqlite schema extension (#680)
* FOGL-6383 SQLite extension schema support

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* FOGL-6383 SQLite schema extensions

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Add Schema update for SQLite

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Fix select syntax

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Fix load method

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Adjust plugin API and add misisng size for varchar columns

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* Adjust plugin API and add misisng size for varchar columns

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* FOGL-6383 Fix issue with insert in service_schema table

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* FOGL-6383 Update SQLBuffer documentation

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* FOGL-6383 Update SQL and add copyright to header

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* FOGL-6383 Improve error message

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* FOGL-6383 Update CMakeLists.txt to trigger retest

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* FOGL-6383 Update unit test

Signed-off-by: Mark Riddoch <mark@dianomic.com>

* FOGL-6383 MOre unit test changes

Signed-off-by: Mark Riddoch <mark@dianomic.com>

--- a/C/plugins/storage/common/CMakeLists.txt
+++ b/C/plugins/storage/common/CMakeLists.txt
@@ -10,7 +10,9 @@ set(DLLIB -ldl)
 file(GLOB SOURCES *.cpp)
 
 # Include header files
-include_directories(include)
+include_directories(./include)
+include_directories(../../../common/include)
+
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../../../lib)
 
