multipart payload fixes with requests-toolbelt pip package
Signed-off-by: ashish-jabble <ashish@dianomic.com>

--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -9,6 +9,8 @@ cchardet==2.1.4
 yarl==1.7.2
 
 pyjwt==1.6.4
+# only required for Public Proxy multipart payload
+requests-toolbelt==0.9.1
 
 # Transformation of data, Apply JqFilter
 # Install pyjq based on python version
