--- a/tests/unit/C/services/storage/postgres/CMakeLists.txt
+++ b/tests/unit/C/services/storage/postgres/CMakeLists.txt
@@ -1,7 +1,18 @@
+set( CMAKE_VERBOSE_MAKEFILE on )
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../../..)
+
+set(GCOVR_PATH "/home/nerd039/.local/bin/gcovr")
+
+# Project configuration
+project(RunTests)
 cmake_minimum_required(VERSION 2.6)
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -O3")
+set(CMAKE_CXX_FLAGS "-std=c++11 -Oo -ggdb")
  
+include(CodeCoverage)
+append_coverage_compiler_flags()
+
 # Locate GTest
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
@@ -18,4 +29,10 @@ file(GLOB utils_sources "../../../../../../C/common/json_utils.cpp")
 # Link runTests with what we want to test and the GTest and pthread library
 add_executable(RunTests ${test_sources} ${logger_sources} ${config_sources} ${utils_sources} tests.cpp)
 target_link_libraries(RunTests ${GTEST_LIBRARIES} pthread)
+
+setup_target_for_coverage_gcovr_html(
+            NAME CoverageHtml
+            EXECUTABLE ${PROJECT_NAME}
+            DEPENDENCIES ${PROJECT_NAME}
+    )
 
