--- a/tests/unit/C/plugins/common/CMakeLists.txt
+++ b/tests/unit/C/plugins/common/CMakeLists.txt
@@ -1,6 +1,17 @@
+set( CMAKE_VERBOSE_MAKEFILE on )
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../..)
+
+set(GCOVR_PATH "/home/nerd039/.local/bin/gcovr")
+
+# Project configuration
+project(RunTests)
 cmake_minimum_required(VERSION 2.6)
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -O3")
+include(CodeCoverage)
+append_coverage_compiler_flags()
+
+set(CMAKE_CXX_FLAGS "-std=c++11 -O0 -ggdb --coverage")
 set(UUIDLIB -luuid)
 set(COMMONLIB -ldl)
 set(LIBCURL_LIB -lcurl)
@@ -83,4 +94,10 @@ if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
 else()
     target_link_libraries(RunTests ${Python3_LIBRARIES})
 endif()
+
+setup_target_for_coverage_gcovr_html(
+            NAME CoverageHtml
+            EXECUTABLE ${PROJECT_NAME}
+            DEPENDENCIES ${PROJECT_NAME}
+    )
 
