Updated includes dir in sqlite plugins tests
Updated includes dir in sqlite plugins tests

--- a/tests/unit/C/cmake_sqlite/CMakeLists.txt
+++ b/tests/unit/C/cmake_sqlite/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(../../../../C/services/common/include)
 include_directories(../../../../C/plugins/storage/common/include)
 include_directories(../../../../C/plugins/storage/sqlite/include)
 include_directories(../../../../C/plugins/storage/sqlite/common/include)
+include_directories(../../../../C/plugins/storage/sqlite/schema/include)
 
 # Check Sqlite3 required version
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
