--- a/tests/unit/C/plugins/common/CMakeLists.txt
+++ b/tests/unit/C/plugins/common/CMakeLists.txt
@@ -1,5 +1,3 @@
-set( CMAKE_VERBOSE_MAKEFILE on )
-
 cmake_minimum_required(VERSION 2.6)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../..)
@@ -8,13 +6,13 @@ set(GCOVR_PATH "$ENV{HOME}/.local/bin/gcovr")
 # Project configuration
 project(RunTests)
 
-include(CodeCoverage)
-append_coverage_compiler_flags()
-
-set(CMAKE_CXX_FLAGS "-std=c++11 -O0 -ggdb")
+set(CMAKE_CXX_FLAGS "-std=c++11 -O0")
 set(UUIDLIB -luuid)
 set(COMMONLIB -ldl)
 set(LIBCURL_LIB -lcurl)
+
+include(CodeCoverage)
+append_coverage_compiler_flags()
 
 EXECUTE_PROCESS( COMMAND grep -o ^NAME=.* /etc/os-release COMMAND cut -f2 -d\" COMMAND sed s/\"//g OUTPUT_VARIABLE os_name )
 EXECUTE_PROCESS( COMMAND grep -o ^VERSION_ID=.* /etc/os-release COMMAND cut -f2 -d\" COMMAND sed s/\"//g OUTPUT_VARIABLE os_version )
