--- a/tests/unit/C/services/storage/postgres/CMakeLists.txt
+++ b/tests/unit/C/services/storage/postgres/CMakeLists.txt
@@ -6,11 +6,10 @@ set(GCOVR_PATH "$ENV{HOME}/.local/bin/gcovr")
 # Project configuration
 project(RunTests)
 
+set(CMAKE_CXX_FLAGS "-std=c++11 -O0")
+ 
 include(CodeCoverage)
 append_coverage_compiler_flags()
-
-set(CMAKE_CXX_FLAGS "-std=c++11 -O0 -ggdb")
- 
 
 # Locate GTest
 find_package(GTest REQUIRED)
