added review feedback
Signed-off-by: Deepanshu Yadav <rohantheyadav@gmail.com>

--- a/C/common/CMakeLists.txt
+++ b/C/common/CMakeLists.txt
@@ -36,8 +36,7 @@ if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     pkg_check_modules(PYTHON REQUIRED python3)
 else()
     if("${OS_NAME}" STREQUAL "mendel")
-        # find_package(NumPy) is not supported on coral board. So better remove it.
-        # And explicitly set later.
+        # We will explicitly set include path later for NumPy.
         find_package(Python3 REQUIRED COMPONENTS Interpreter Development )
     else()
         find_package(Python3 REQUIRED COMPONENTS Interpreter Development NumPy)
@@ -59,11 +58,9 @@ else()
         execute_process(
             COMMAND python3
                 -c "import numpy; print(numpy.get_include())"
-                OUTPUT_VARIABLE NUMPY_INCLUDE_FULL_PATH
+                OUTPUT_VARIABLE Python3_NUMPY_INCLUDE_DIRS
                 OUTPUT_STRIP_TRAILING_WHITESPACE
         )
-        # Sets the variable Python3_NUMPY_INCLUDE_DIRS with the value fetched above.
-        set(Python3_NUMPY_INCLUDE_DIRS ${NUMPY_INCLUDE_FULL_PATH})
         # Now we can add include directories as usual.
         include_directories(${Python3_INCLUDE_DIRS} ${Python3_NUMPY_INCLUDE_DIRS})
     else()
