--- a/tests/unit/C/cmake_sqlite/CMakeLists.txt
+++ b/tests/unit/C/cmake_sqlite/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(../../../../C/services/common/include)
 include_directories(../../../../C/plugins/storage/common/include)
 include_directories(../../../../C/plugins/storage/sqlite/include)
 include_directories(../../../../C/plugins/storage/sqlite/common/include)
+include_directories(../../../../C/plugins/storage/sqlite/schema/include)
 
 # Check Sqlite3 required version
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
@@ -23,7 +24,7 @@ find_package(sqlite3)
 
 # Find source files
 file(GLOB COMMON_SOURCES ../../../../C/plugins/storage/sqlite/common/*.cpp)
-file(GLOB SOURCES ../../../../C/plugins/storage/sqlite/*.cpp)
+file(GLOB SOURCES ../../../../C/plugins/storage/sqlite/*.cpp ../../../../C/plugins/storage/sqlite/schema/*.cpp)
 
 # Create shared library
 
